# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

group("unittest") {
  testonly = true
  deps = []

  deps += [
    ":DataSharePermissionTest",
  ]
}

config("permission_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${datashare_common_native_path}/include",
    "${datashare_native_permission_path}/include",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_unittest("DataSharePermissionTest") {
  module_out_path = "data_share/data_share/native/permission"
  
  sources = [
    "${datashare_base_path}/test/unittest/native/permission/src/data_share_permission_test.cpp",
  ]

  deps = [
    "${datashare_innerapi_path}:datashare_permission",
    "${datashare_innerapi_path}/common:datashare_common",
    "${datashare_base_path}/test/unittest/native/resource/datashare_ext_bundle:datashare_ext",
    "${datashare_base_path}/test/unittest/native/resource/datashare_proxy_bundle:proxydatas_with_permission",
    "${datashare_base_path}/test/unittest/native/resource/ohos_test:copy_ohos_test",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  cflags = [
    "-fvisibility=hidden",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}