# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

group("unittest") {
  testonly = true
  deps = []

  deps += [
    ":DataShareStubTest",
    ":DataShareStubImplSystemTest",
    ":DataShareNormalDfxTest",
  ]
}

config("permission_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${datashare_common_native_path}/include",
    "${datashare_native_permission_path}/include",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_unittest("DataShareStubTest") {
  module_out_path = "data_share/data_share/native/provider"
 
  include_dirs = [
    "${datashare_innerapi_path}/consumer/include",
    "${datashare_innerapi_path}/common/include",
    "${datashare_native_provider_path}/include",
    "${datashare_native_proxy_path}/include",
  ]
 
  sources = [ "${datashare_base_path}/test/unittest/native/provider/src/datashare_stub_test.cpp" ]
 
  deps = [
    "${datashare_innerapi_path}:datashare_consumer_static",
    "${datashare_innerapi_path}:datashare_provider",
    "${datashare_innerapi_path}/common:datashare_common_static",
  ]
 
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:dataobs_manager",
    "ability_runtime:extension_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "ipc:ipc_napi",
    "relational_store:rdb_data_ability_adapter",
    "samgr:samgr_proxy",
  ]
 
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    blocklist = "${datashare_base_path}/cfi_blocklist.txt"
  }

  cflags = [
    "-fvisibility=hidden",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_unittest("DataShareStubImplSystemTest") {
  module_out_path = "data_share/data_share/native/provider"
 
  include_dirs = [
    "${datashare_innerapi_path}/consumer/include",
    "${datashare_innerapi_path}/common/include",
    "${datashare_native_provider_path}/include",
    "${datashare_native_proxy_path}/include",
  ]
 
  sources = [ "${datashare_base_path}/test/unittest/native/provider/src/datashare_stub_impl_system_test.cpp" ]
 
  deps = [
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}:datashare_provider",
    "${datashare_innerapi_path}/common:datashare_common",
  ]
 
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "ipc:ipc_napi",
    "samgr:samgr_proxy",
  ]
 
  cflags = [
    "-fvisibility=hidden",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_unittest("DataShareNormalDfxTest") {
  module_out_path = "data_share/data_share/native/provider"
 
  include_dirs = [
    "${datashare_innerapi_path}/consumer/include",
    "${datashare_innerapi_path}/common/include",
    "${datashare_native_provider_path}/include",
    "${datashare_native_proxy_path}/include",
  ]
 
  sources = [ "${datashare_base_path}/test/unittest/native/provider/src/datashare_normal_dfx_test.cpp" ]
 
  deps = [
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}:datashare_provider",
    "${datashare_innerapi_path}/common:datashare_common",
  ]
 
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "ipc:ipc_napi",
    "samgr:samgr_proxy",
  ]
 
  cflags = [
    "-fvisibility=hidden",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}